@@ -543,11 +543,12 @@
 # comment.
 # Topic access is added with lines of the format:
 #
-# topic [read|write] <topic>
+# topic [read|write|readwrite] <topic>
 # 
-# The access type is controlled using "read" or "write". This parameter
-# is optional - if not given then the access is read/write.
-# <topic> can contain the + or # wildcards as in subscriptions.
+# The access type is controlled using "read", "write" or "readwrite". This
+# parameter is optional (unless <topic> contains a space character) - if not
+# given then the access is read/write.  <topic> can contain the + or #
+# wildcards as in subscriptions.
 # 
 # The first set of topics are applied to anonymous clients, assuming
 # allow_anonymous is true. User specific topic ACLs are added after a 
@@ -576,7 +577,7 @@
 # with the following pattern:
 # pattern write $SYS/broker/connection/%c/state
 #
-# pattern [read|write] <topic>
+# pattern [read|write|readwrite] <topic>
 #
 # Example:
 #
